# ComputionalMethodsGUI

./: CMakeLists.txt  ComputationalMethods.pro  ComputationalMethods.pro.IO4561  README.md  gaussmethod.cpp  gaussmethod.h  icomputionalmethods.cpp  icomputionalmethods.h  kramermethod.cpp  kramermethod.h  mainwindowview.cpp  mainwindowview.h  matrixinputview.cpp  matrixinputview.h  qanswerform.cpp  qanswerform.h  qinputparamsline.cpp  qinputparamsline.h  seidelmethod.cpp  seidelmethod.h  simpleiterationmethod.cpp  simpleiterationmethod.h  upperrelaxationmethod.cpp  upperrelaxationmethod.h
forms/: mainwindow.ui
gui/include/: labelstyle.qss  mainwindowview.h  matrixinputview.h  qanswerform.h  qinputparamsline.h  qinputsizeline.cpp  qinputsizeline.h
gui/src/: control.cpp  mainwindow.cpp  mainwindowview.cpp  matrixinputview.cpp  qanswerform.cpp  qinputparamsline.cpp  qinputsizeline.cpp
lib/include/: icomputionalmethods.h
lib/src/: gaussmethod.cpp  gaussmethod.h  icomputionalmethods.cpp  kramermethod.cpp  kramermethod.h  seidelmethod.cpp  seidelmethod.h  simpleiterationmethod.cpp  simpleiterationmethod.h  upperrelaxationmethod.cpp  upperrelaxationmethod.h
sample/: main.cpp
